2019-11-05  Mark Galassi  <mark@galassi.org>

	* Doxyfile: added USE_MATHJAX, the compact latex option, and the
	amsmath package, which is needed for the \text{'} that comes up
	occasionally in the doxygen docs.

	* Doc/LanlGeoMag.tag.in, configure.ac: the LanlGeoMag.tag file was
	required for "make dist" but did not exist.  I have added it,
	built from a .in file so it can have a version number in it.
	Modified configure.ac to generate Doc/LanlGeoMag.tag from
	Doc/LanlGeoMag.tag.in

2017-11-16  Mark Galassi  <markgalassi@lanl.gov>

	* configure.ac: releasing version 1.5.16.

	* lanlgeomag.spec.in: added --disable-perl for building RPMs.

	* libLanlGeoMag/Makefile.am (EXTRA_DIST): took the Images
	directory out of this list because it makes the tarball
	distribution too big.

2011-07-08  Mike Henderson <mghenderson@lanl.gov>
	* configure.ac: added LGM_INDEX_DATA_DIR to locate where to find
	index data (e.g. Kp, Dst, AE).

2011-04-25  Mark Galassi  <markgalassi@lanl.gov>
	* configure.ac, lanlgeomag.spec.in: started maintaining a .spec.in
	file.

	* NEWS: started this file.

	* HACKING: added a release section.

2010-09-22  Mark Galassi  <markgalassi@lanl.gov>

	* Makefile.am (EXTRA_DIST),
	libLanlGeoMag/Makefile.am (EXTRA_DIST): now I add the files
	individually instead of putting whole directories.  The problem
	with whole directories is that the .svn directories also got put
	there, which is not good.

2010-08-12  Mark Galassi  <markgalassi@lanl.gov>

	* libLanlGeoMag/dox: removed this directory from source control
	since it is auto-generated.

	* configure.ac: added the DX_INIT_DOXYGEN directives for doxygen.

	* Makefile.am, aminclude.am: added including of aminclude.am which
	has doxygen stuff in it.

	* Makefile.in, */Makefile.in, */*/Makefile.in, configure,
	config.sub, depcomp, aclocal.m4, autoscan, ltmain.sh, install-sh,
	configure, config.guess: removed these files because they are
	auto-generated.

	* HACKING: introduced this file which gives developer