@@ -56,8 +56,8 @@ libLanlGeoMag_la_LDFLAGS = $(AM_LDFLAGS) @PERL_LDFLAGS@ @OPENMP_CFLAGS@
 libLanlGeoMag_la_CFLAGS = $(AM_CFLAGS) @PERL_CFLAGS@ @OPENMP_CFLAGS@ 
 libLanlGeoMag_la_CPPFLAGS = $(AM_CPPFLAGS) -DDATADIR=\"$(datadir)\" -DHASH_FUNCTION=HASH_SFH -DHASH_BLOOM=32 @PERL_CPPFLAGS@
 
-#EXTRA_DIST = TS07D_FILES DE_FILES Images Stars
-EXTRA_DIST = TS07D_FILES DE_FILES Stars
+EXTRA_DIST = TS07D_FILES DE_FILES Images Stars
+#EXTRA_DIST = TS07D_FILES DE_FILES Stars
 
 install-data-hook:
 if ENABLE_INDICES
